use netty to free direct byte buffer