@@ -144,7 +144,6 @@
         <!-- By default, the argLine is empty-->
         <gson.version>2.8.6</gson.version>
         <argLine/>
-        <argLine.java9/>
     </properties>
     <!--
         if we claim dependencies in dependencyManagement, then we do not claim
@@ -521,7 +520,7 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <configuration>
-                        <argLine>${argLine} ${argLine.java9} -Xmx1024m</argLine>
+                        <argLine>${argLine} -Xmx1024m</argLine>
                     </configuration>
                 </plugin>
                 <!--
@@ -901,7 +900,6 @@
             </activation>
             <properties>
                 <maven.compiler.release>8</maven.compiler.release>
-                <argLine.java9>--add-exports java.base/jdk.internal.ref=ALL-UNNAMED</argLine.java9>
             </properties>
             <dependencies>
                 <!-- for jdk-11 -->
